--- a/challenge/assets/css/style.css
+++ b/challenge/assets/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+    background: #464603e5;
+    color: #fff;
+}
+
+
 navbar{
     background-color: white;
 }
@@ -27,4 +33,44 @@ navbar{
     color: black;
     cursor: pointer;
     text-decoration: none;
+}
+
+/* main section */
+
+.main{
+    background: url();
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 70vh;
+}
+
+.main h3{
+    font-size: 7rem;
+    font-weight: 700;
+}
+
+.main h6{
+    font-size: 2rem;
+    text-transform: uppercase;
+    line-height: 1;
+    border-bottom: 3px solid rgb(0, 0, 0);
+    width: 69%;
+}
+
+.main .bt1{
+    height: 55px;
+    width: 138px;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    outline: none;
+    border: none;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.main .bt1:hover{
+    background-color: rgb(187, 190, 3);
+    transition: 0.5s;
+    
 }
