--- a/challenge/assets/css/style.css
+++ b/challenge/assets/css/style.css
@@ -117,3 +117,30 @@ h1{
     border: 1px solid black;
     transition: 0.5s;
 }
+
+.card{
+    border: none;
+    outline: none;
+}
+
+.card p{
+    color: black;
+}
+
+.circle{
+    height: 70px;
+    width: 70px;
+    background-color: lightgrey;
+    color: black;
+    padding: 10px;
+    display: inline-block;
+    margin-bottom: 20px;
+    font-size: 20px;
+    border-radius: 50%;
+}
+
+.card:hover .circle{
+    background-color: black;
+    color: white;
+    transition: 0.5s;
+}
