--- a/challenge/assets/css/style.css
+++ b/challenge/assets/css/style.css
@@ -6,7 +6,7 @@
 
 body{
     background: #464603e5;
-    color: #fff;
+    color: rgb(24, 23, 23);
 }
 
 
@@ -143,4 +143,32 @@ h1{
     background-color: black;
     color: white;
     transition: 0.5s;
+}
+
+.cirlce:hover{
+    background-color: black;
+     transition: 0.5s;
+    columns: white;
+}
+
+.contact .btn3{
+    background-color: black;
+    color: white;
+    outline: none;
+    border: none;
+    height: 40px;
+    width: 140px;
+    border-radius: 4px;
+}
+
+.btn3:hover{
+    background: transparent;
+    color: black;
+    transition: 0.5s;
+    border: 1px solid black;
+}
+
+footer{
+    background-color: black;
+    color: lightgray;
 }
